unfix header position to prevent nav and logo overlap when scrolling, prettying up about page

--- a/main.css
+++ b/main.css
@@ -51,10 +51,25 @@ footer a {
   float: right;
 }
 
+/* bring picture and paragraphs coser together by nesting in div */
+main > div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* text alignment and paragraph width */
 .about-text {
   max-width: 870px;
   margin: 0 1em;
   text-align: left;
+}
+
+/* manage picture at different window sizes */
+#picture img {
+  padding-top: 10px;
+  max-width: 100%;
+  height: auto;
 }
 
 /* hide header and footer at smaller screen sizes */
